Update the contribution guide.